language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/mutate_with_borrowed_loc_invalid.exp
error: 

   ┌── tests/move_check/translated_ir_tests/borrow_tests/mutate_with_borrowed_loc_invalid.move:4:17 ───
   │
 4 │         let y = &x;
   │                 -- It is still being borrowed by this reference
 5 │         x = 0;
   │         ^ Invalid assignment of local 'x'
   │

