language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/mutate_with_borrowed_loc_invalid.move
module M {
    fun t1() {
        let x = 0;
        let y = &x;
        x = 0;
        y;
        x;
    }

}

// check: STLOC_UNSAFE_TO_DESTROY_ERROR
